--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && cross-env APP_ENV=dev max dev",
+    "start": "cross-env APP_ENV=dev max dev",
     "build": "cross-env APP_ENV=pro max build",
     "postinstall": "max setup",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
