--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "react": "17.x",
     "react-ace": "^9.4.3",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.x",
     "react-resizable": "^3.0.5",
     "react-sortable-hoc": "^2.0.0",
