--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/pro-components": "^2.3.37",
+    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/react": "^0.0.5",
     "@icon-park/react": "^1.4.2",
     "@monaco-editor/react": "^4.4.6",
     "@types/faker": "^6.6.9",
@@ -45,6 +47,7 @@
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "debounce": "^1.2.1",
+    "dnd-kit": "^0.0.2",
     "faker": "^5.5.3",
     "http-server": "^14.1.1",
     "inline-style-prefixer": "^7.0.0",
@@ -60,8 +63,10 @@
     "react-dom": "17.x",
     "react-resizable": "^3.0.5",
     "react-sortable-hoc": "^2.0.0",
+    "react-sortablejs": "^6.1.4",
     "react-splitter-layout": "^4.0.0",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "sortablejs": "^1.15.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
