--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/pro-components": "^2.3.37",
+    "@antv/x6": "^2.18.1",
+    "@antv/x6-plugin-keyboard": "^2.2.3",
     "@dnd-kit/core": "^6.2.0",
     "@dnd-kit/react": "^0.0.5",
+    "@emotion/styled": "^11.14.0",
     "@icon-park/react": "^1.4.2",
     "@monaco-editor/react": "^4.4.6",
+    "@projectstorm/react-diagrams": "^7.0.4",
     "@types/faker": "^6.6.9",
     "@types/lodash": "^4.14.196",
     "@types/moment": "^2.13.0",
@@ -53,6 +57,10 @@
     "http-server": "^14.1.1",
     "inline-style-prefixer": "^7.0.0",
     "js-md5": "^0.8.3",
+    "jsmind": "^0.8.7",
+    "kity": "^2.0.4",
+    "kityminder-core": "^1.4.50",
+    "kityminder-editor": "^1.0.67",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
