--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "@ant-design/charts": "^1.4.2",
     "@ant-design/pro-components": "^2.3.37",
     "@antv/x6": "^2.18.1",
+    "@antv/x6-plugin-clipboard": "^2.1.6",
+    "@antv/x6-plugin-history": "^2.2.4",
     "@antv/x6-plugin-keyboard": "^2.2.3",
+    "@antv/x6-plugin-scroller": "^2.0.10",
+    "@antv/x6-plugin-selection": "^2.2.2",
+    "@antv/x6-plugin-transform": "^2.1.8",
     "@dnd-kit/core": "^6.2.0",
     "@dnd-kit/react": "^0.0.5",
     "@emotion/styled": "^11.14.0",
