--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "inline-style-prefixer": "^7.0.0",
     "js-md5": "^0.8.3",
     "jsmind": "^0.8.7",
+    "jsonpath": "^1.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
