--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
     "react-sortable-hoc": "^2.0.0",
     "react-sortablejs": "^6.1.4",
     "react-splitter-layout": "^4.0.0",
+    "relation-graph-react": "^2.2.11",
+    "simple-mind-map": "^0.14.0-fix.1",
+    "simple-mind-map-plugin-themes": "^1.0.1",
     "socket.io-client": "^4.6.1",
     "sortablejs": "^1.15.5"
   },
