--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
+    "quill": "^2.0.3",
     "react": "17.x",
     "react-ace": "^9.4.3",
     "react-beautiful-dnd": "^13.1.1",
