--- a/package.json
+++ b/package.json
@@ -68,12 +68,14 @@
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
     "quill": "^2.0.3",
+    "rc-virtual-list": "^3.19.1",
     "react": "17.x",
     "react-ace": "^9.4.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.x",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-resizable": "^3.0.5",
     "react-sortable-hoc": "^2.0.0",
     "react-sortablejs": "^6.1.4",
