--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "scripts": {
+    "clean": "npx rimraf \"src/**/*.js\" \"src/**/*.js.map\" \"src/**/**/**/*.js\" \"src/**/**/**/*.js.map\"",
+    "prebuild": "yarn run clean",
     "start": "cross-env APP_ENV=dev max dev",
     "start hb": "cross-env APP_ENV=hb max hb",
     "build": "cross-env APP_ENV=pro max build",
@@ -22,7 +24,7 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
-    "@ant-design/pro-components": "^2.3.37",
+    "@ant-design/pro-components": "^2.8.9",
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-clipboard": "^2.1.6",
     "@antv/x6-plugin-history": "^2.2.4",
@@ -46,11 +48,15 @@
     "@types/react-sortable-hoc": "^0.7.1",
     "@types/react-splitter-layout": "^3.0.2",
     "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/recharts": "^1.8.29",
     "@types/socket.io-client": "^3.0.0",
-    "@umijs/max": "^4.0.0",
+    "@umijs/core": "^4.4.11",
+    "@umijs/max": "^4.4.11",
+    "@umijs/preset-umi": "^4.4.11",
     "@wecom/jssdk": "^1.4.5",
     "ace-builds": "^1.32.6",
-    "antd": "^5.1.7",
+    "ahooks": "^3.8.5",
+    "antd": "^5.26.2",
     "array-move": "^4.0.0",
     "classnames": "^2.3.2",
     "cron-parser": "^4.9.0",
@@ -67,24 +73,29 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
-    "react": "17.x",
+    "react": "^17.0.2",
     "react-ace": "^9.4.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "17.x",
+    "react-dom": "^17.0.2",
     "react-resizable": "^3.0.5",
     "react-sortable-hoc": "^2.0.0",
     "react-sortablejs": "^6.1.4",
     "react-splitter-layout": "^4.0.0",
+    "recharts": "^2.15.3",
     "socket.io-client": "^4.6.1",
     "sortablejs": "^1.15.5"
   },
   "devDependencies": {
+    "@types/jsonpath": "^0.2.4",
+    "@types/node": "^24.0.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@umijs/plugins": "^4.4.11",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
+    "rimraf": "^3.0.2",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
   }
