nginx代理优化，json格式化

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,9 +3,17 @@ server {
     server_name  localhost;
 
     location /api/ {
-        proxy_pass http://host.docker.internal:5050/;  # 关键修改
+        #proxy_pass http://host.docker.internal:5050/;  # 关键修改
+        proxy_pass http://case_auto_test:5050/;  # 修改这里
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location ~ ^/(mock|mockpublic)/ {
+        proxy_pass http://case_auto_test:5050;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        #rewrite ^/(?:mock|mockpublic)/(.*)$ /$1 break;
     }
 
     location / {
