--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@antv/x6-plugin-scroller": "^2.0.10",
     "@antv/x6-plugin-selection": "^2.2.2",
     "@antv/x6-plugin-transform": "^2.1.8",
-    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/react": "^0.0.5",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/styled": "^11.14.0",
     "@icon-park/react": "^1.4.2",
     "@monaco-editor/react": "^4.4.6",
