--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "react-sortable-hoc": "^2.0.0",
     "react-sortablejs": "^6.1.4",
     "react-splitter-layout": "^4.0.0",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "relation-graph-react": "^2.2.11",
     "simple-mind-map": "^0.14.0-fix.1",
     "simple-mind-map-plugin-themes": "^1.0.1",
